# pycvxset

./: .buildinfo  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pycvxset.ConstrainedZonotope.html  pycvxset.Ellipsoid.html  pycvxset.Polytope.html  pycvxset.common.constants.html  pycvxset.common.html  pyproject.toml  references.html  requirements.txt  search.html  searchindex.js  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: deploy_gh_pages.yaml  requirements-dev.txt  run_diagnostics_and_tests_linux.yaml  run_diagnostics_and_tests_macos.yaml  run_diagnostics_and_tests_windows.yaml  static_checks.yaml
.reuse/: dep5
_modules/: index.html
_modules/pycvxset/: ConstrainedZonotope.html  Ellipsoid.html  Polytope.html  common.html
_sources/: index.rst.txt  pycvxset.ConstrainedZonotope.rst.txt  pycvxset.Ellipsoid.rst.txt  pycvxset.Polytope.rst.txt  pycvxset.common.constants.rst.txt  references.rst.txt
_sources/api_summary/: pycvxset.ConstrainedZonotope.rst.txt  pycvxset.Ellipsoid.rst.txt  pycvxset.Polytope.rst.txt  pycvxset.common.approximate_volume_from_grid.rst.txt  pycvxset.common.is_constrained_zonotope.rst.txt  pycvxset.common.is_ellipsoid.rst.txt  pycvxset.common.is_polytope.rst.txt  pycvxset.common.prune_and_round_vertices.rst.txt  pycvxset.common.spread_points_on_a_unit_sphere.rst.txt
_sources/tutorials/: acc2025_code_snippets.rst.txt  tutorials.rst.txt
_static/: ACC2025_code_snippets.html  Application_Reachability.html  ConstrainedZonotope.html  Polytope.html
api_summary/: pycvxset.ConstrainedZonotope.html  pycvxset.Ellipsoid.html  pycvxset.Polytope.html  pycvxset.common.approximate_volume_from_grid.html  pycvxset.common.is_constrained_zonotope.html  pycvxset.common.is_ellipsoid.html  pycvxset.common.is_polytope.html  pycvxset.common.prune_and_round_vertices.html  pycvxset.common.spread_points_on_a_unit_sphere.html
docs/: Makefile  make.bat
docs/source/: conf.py  index.rst  pycvxset.ConstrainedZonotope.rst  pycvxset.Ellipsoid.rst  pycvxset.Polytope.rst  pycvxset.common.constants.rst  pycvxset.common.rst  references.rst
docs/source/_static/: Application_Reachability.html  ConstrainedZonotope.html  Polytope.html
docs/source/_templates/: custom_navigation.html
docs/source/tutorials/: application_reachability.rst  constrained_zonotope.rst  polytope.rst  tutorials.rst
examples/: ACC2025_code_snippets.ipynb  Application_Reachability.ipynb  ConstrainedZonotope.ipynb  Polytope.ipynb  pycvxset_diag.py  pycvxset_logo.py
pycvxset/: __init__.py
pycvxset/ConstrainedZonotope/: __init__.py  operations_binary.py  operations_unary.py
pycvxset/Ellipsoid/: __init__.py  operations_binary.py
pycvxset/Polytope/: __init__.py  operations_binary.py  operations_unary.py  plotting_scripts.py  vertex_halfspace_enumeration.py
pycvxset/common/: __init__.py  constants.py  polytope_approximations.py
scripts/: check_if_method_names_are_consistent.py  check_inconsistencies_in_duck_typing.py  run_all.sh  run_coverage_on_example_notebooks.sh  run_example_notebooks_and_update_docs.sh  run_sphinx_html.sh  run_sphinx_pdf.sh  run_tests_and_update_docs.sh
stubs/numpy/: __init__.pyi
tests/: .coveragerc  test_common.py  test_constrained_zonotope_binary.py  test_constrained_zonotope_init.py  test_constrained_zonotope_plotting_polytope_approx.py  test_constrained_zonotope_unary.py  test_ellipsoid.py  test_polytope_binary.py  test_polytope_init.py  test_polytope_plotting_scripts.py  test_polytope_unary.py  test_polytope_vertex_facet_enum.py
tutorials/: acc2025_code_snippets.html  application_reachability.html  constrained_zonotope.html  polytope.html  tutorials.html
